src/objects/ICG_Certification__c.object
<CustomObject>
    <description>One Source Catalog of certifications</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>Alternative name for the certification. Used in predictive search box</description>
        <label>Alias</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_to__c</fullName>
        <description>Describes the station type to which it applies</description>
        <label>Applicable to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airport_Operator</fullName>
                    <label>Airport Operator</label>
                </value>
                <value>
                    <fullName>Cargo_Handling_Facility</fullName>
                    <label>Cargo Handling Facility</label>
                </value>
                <value>
                    <fullName>Freight_Forwarder</fullName>
                    <label>Freight Forwarder</label>
                </value>
                <value>
                    <fullName>Ramp_Handler</fullName>
                    <label>Ramp Handler</label>
                </value>
                <value>
                    <fullName>Shipper</fullName>
                </value>
                <value>
                    <fullName>Trucker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Queue_Name__c</fullName>
        <description>API Name of the Queue that will be in charge of auditing the Stations to get the certification</description>
        <inlineHelpText>API Name of the Queue that will be in charge of auditing the Stations to get the certification</inlineHelpText>
        <label>Audit Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <description>Describes the certification type</description>
        <label>Certification Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certifications of Excellency</fullName>
                </value>
                <value>
                    <fullName>Certifications of Compliance</fullName>
                </value>
                <value>
                    <fullName>Assessments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Types of certificates</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CEIV_Fresh_Managers</fullName>
                    <label>CEIV Fresh</label>
                </value>
                <value>
                    <fullName>CEIV_Live_Animals_Managers</fullName>
                    <label>CEIV Live Animals</label>
                </value>
                <value>
                    <fullName>CEIV_Pharma_Managers</fullName>
                    <label>CEIV Pharma</label>
                </value>
                <value>
                    <fullName>CEIV_Security_Managers</fullName>
                    <label>CEIV Security</label>
                </value>
                <value>
                    <fullName>IEnvA_Managers</fullName>
                    <label>IEnvA</label>
                </value>
                <value>
                    <fullName>SFOC_Managers</fullName>
                    <label>SFOC</label>
                </value>
                <value>
                    <fullName>United_for_Wildlife_Managers</fullName>
                    <label>United for Wildlife</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes the description of the certification</description>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Period__c</fullName>
        <description>Describes the expiration period</description>
        <label>Expiration Period (years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Filename__c</fullName>
        <description>Name of the image file used to generate the full path to static resource.</description>
        <inlineHelpText>This file must to be in the static resource ICG_Resources., in folder img/certificatons</inlineHelpText>
        <label>Image filename</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Describes the image of the certification</description>
        <formula>&quot;/resource/ICG_Resources/img/certifications/&quot; &amp;  Image_Filename__c</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if the certification is visible</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Field used to show in the UI</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Represents the order for the result cards.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Order__c</fullName>
        <description>Represents the order for the certifications in the validations programs on the home page</description>
        <label>Tech_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <description>Describes the link of the certification</description>
        <label>link</label>
        <type>Url</type>
    </fields>
    <label>OS Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OS Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>